# QuickComQ-Dispatcher

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
demo/: demo.py
qcq_dispatch/: dispatch.py
src/qcq_dispatch/: __init__.py  dispatch.py  feedback.txt  generate_packet.py  ipconfig.yaml
src/qcq_dispatch/network/: YamlSender.py  receiver.py  sender.py
tests/: input_test.py  m_process_test.py  message_recv_test.py
